--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -1,6 +1,6 @@
 {
   "title": "Nuxt Content Blog",
-  "url": "https://nuxt-content-blog.netlify.app/",
+  "url": "https://nuxt-content-blog.netlify.app",
   "logo": {
     "light": "/logo-light.svg",
     "dark": "/logo-dark.svg"
